# podman-example

./: BUILD_IMAGES.md  CREATE_VOLUME.md  README.md
dotnet-service/: Dockerfile  DotnetService.csproj  HELP.md  Program.cs  dotnet-service.slnx
dotnet-service/Properties/: launchSettings.json
dotnet-service/tests/: DotnetService.Tests.csproj  HelloEndpointTests.cs
image-registry/: Dockerfile  HELP.md  config.yml  sync-local-images.ps1
ngix-proxy/: Dockerfile  HELP.md  nginx.conf
podman-compose/: HELP.md  compose.yaml
python-service/: .dockerignore  Dockerfile  HELP.md  pyproject.toml
python-service/app/: config.py  main.py
python-service/config/: settings.toml
python-service/python_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-service/tests/: test_main.py
quarkus-native-service/: Dockerfile  HELP.md  README.md  pom.xml
quarkus-native-service/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
quarkus-native-service/src/main/java/com/example/: GreetingResource.java
quarkus-native-service/src/main/resources/: application.properties
quarkus-native-service/src/test/java/com/example/: GreetingResourceTest.java
spring-service/: Dockerfile  pom.xml
spring-service/src/main/java/com/example/springservice/: HelloController.java
spring-service/src/main/resources/: application.properties
spring-service/src/test/java/com/example/springservice/: SpringServiceApplicationTests.java
