[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-service"
version = "0.1.0"
description = "Sample FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pytoml",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
